tests/integration/tests/check_commands/CHECK/one_string/negative-match/02-negative_regex_match/sample.itest
; RUN: %cat "%S/filecheck.input" | %expect_exit 1 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s" --strict-whitespace --match-full-lines

; CHECK:{{.*}}filecheck.check:1:10: error: CHECK: expected string not found in input{{$}}
; CHECK-NEXT:{{^; CHECK: .....hello.....$}}
; CHECK-NEXT:{{^         \^$}}
; CHECK-NEXT:<stdin>:1:1: note: scanning from here
; CHECK-NEXT:h e llo
; CHECK-NEXT:^
; CHECK-EMPTY:
